/**
 * æ¯æ—¥å¥–åŠ±ç³»ç»Ÿ
 * å®ç°8ä¸ªæ¯æ—¥å¥–åŠ±åŠŸèƒ½ï¼š
 * 1. å•†åŸå…è´¹ç¤¼åŒ…
 * 2. åˆ†äº«å¥–åŠ±
 * 3. æœˆå¡å¥–åŠ±
 * 4. é‚®ç®±å¥–åŠ±
 * 5. QQä¼šå‘˜å¥–åŠ±
 * 6. å›¾é‰´å¥–åŠ±
 * 7. ç‚¹åˆ¸è´­ä¹°åŒ–è‚¥
 * 8. ä½¿ç”¨åŒ–è‚¥ç¤¼åŒ…
 */

const { types } = require('./proto');
const { toLong, toNum, sleep } = require('./utils');
const { getItemName } = require('./gameConfig');

class DailyRewards {
    constructor(farmConnection) {
        this.fc = farmConnection;
        
        // æ¯æ—¥å¥–åŠ±çŠ¶æ€è¿½è¸ª
        this.dailyRewardState = {
            freeGifts: '',        // å•†åŸå…è´¹ç¤¼åŒ…å®Œæˆæ—¥æœŸ
            share: '',            // åˆ†äº«å¥–åŠ±å®Œæˆæ—¥æœŸ
            monthCard: '',        // æœˆå¡å¥–åŠ±å®Œæˆæ—¥æœŸ
            email: '',            // é‚®ç®±å¥–åŠ±å®Œæˆæ—¥æœŸ
            vipGift: '',          // QQä¼šå‘˜å¥–åŠ±å®Œæˆæ—¥æœŸ
            illustrated: '',      // å›¾é‰´å¥–åŠ±å®Œæˆæ—¥æœŸ
            fertilizerBuy: '',    // åŒ–è‚¥è´­ä¹°å®Œæˆæ—¥æœŸ
            fertilizerUse: '',    // åŒ–è‚¥ç¤¼åŒ…ä½¿ç”¨å®Œæˆæ—¥æœŸ
        };
        
        // ä¸Šæ¬¡è´­ä¹°åŒ–è‚¥æ—¶é—´
        this.lastFertilizerBuyAt = 0;
        
        // æ¯æ—¥ä»»åŠ¡å®šæ—¶å™¨
        this.dailyRoutineTimer = null;
        
        // åŠŸèƒ½å¼€å…³
        this.toggles = {
            autoFreeGifts: true,
            autoShareReward: true,
            autoMonthCard: true,
            autoEmailReward: true,
            autoVipGift: true,
            autoIllustrated: true,
            autoFertilizerBuy: false,
            autoFertilizerUse: false,
        };
    }

    /**
     * å¯åŠ¨æ¯æ—¥å¥–åŠ±ç³»ç»Ÿ
     */
    start() {
        // é¦–æ¬¡æ‰§è¡Œå»¶è¿Ÿ8ç§’
        setTimeout(() => this.runDailyRewards(), 8000);
        // æ¯å°æ—¶æ£€æŸ¥ä¸€æ¬¡
        this.dailyRoutineTimer = setInterval(() => this.runDailyRewards(), 60 * 60 * 1000);
        this.fc.addLog('æ¯æ—¥å¥–åŠ±', 'æ¯æ—¥å¥–åŠ±ç³»ç»Ÿå·²å¯åŠ¨');
    }

    /**
     * åœæ­¢æ¯æ—¥å¥–åŠ±ç³»ç»Ÿ
     */
    stop() {
        if (this.dailyRoutineTimer) {
            clearInterval(this.dailyRoutineTimer);
            this.dailyRoutineTimer = null;
        }
    }

    /**
     * è®¾ç½®åŠŸèƒ½å¼€å…³
     */
    setToggles(toggles) {
        Object.assign(this.toggles, toggles);
    }

    /**
     * è·å–æ—¥æœŸé”®
     */
    _getDateKey() {
        const now = new Date();
        const y = now.getFullYear();
        const m = String(now.getMonth() + 1).padStart(2, '0');
        const d = String(now.getDate()).padStart(2, '0');
        return `${y}-${m}-${d}`;
    }

    /**
     * æ£€æŸ¥ä»Šå¤©æ˜¯å¦å·²å®Œæˆ
     */
    _isDoneToday(key) {
        return this.dailyRewardState[key] === this._getDateKey();
    }

    /**
     * æ ‡è®°ä»Šå¤©å·²å®Œæˆ
     */
    _markDoneToday(key) {
        this.dailyRewardState[key] = this._getDateKey();
    }

    /**
     * æ ¼å¼åŒ–å¥–åŠ±æ‘˜è¦
     */
    _getRewardSummary(items) {
        if (!items || items.length === 0) return 'æ— å¥–åŠ±';
        const parts = [];
        for (const item of items) {
            const id = toNum(item.id);
            const count = toNum(item.count);
            if (count <= 0) continue;
            if (id === 1 || id === 1001) parts.push(`ğŸ’°é‡‘å¸+${count}`);
            else if (id === 2 || id === 1101) parts.push(`â­ç»éªŒ+${count}`);
            else if (id === 1002) parts.push(`ğŸ’ç‚¹åˆ¸+${count}`);
            else parts.push(`${getItemName(id)}Ã—${count}`);
        }
        return parts.join(' | ') || 'æ— å¥–åŠ±';
    }

    /**
     * æ‰§è¡Œæ¯æ—¥å¥–åŠ±é¢†å–
     */
    async runDailyRewards() {
        if (!this.fc.isRunning || !this.fc.isConnected) return;
        
        this.fc.addLog('æ¯æ—¥å¥–åŠ±', 'å¼€å§‹æ£€æŸ¥æ¯æ—¥å¥–åŠ±...');
        
        try {
            if (this.toggles.autoFreeGifts) await this.claimFreeGifts();
            await sleep(500);
            
            if (this.toggles.autoShareReward) await this.claimShareReward();
            await sleep(500);
            
            if (this.toggles.autoMonthCard) await this.claimMonthCard();
            await sleep(500);
            
            if (this.toggles.autoEmailReward) await this.claimEmailRewards();
            await sleep(500);
            
            if (this.toggles.autoVipGift) await this.claimVipGift();
            await sleep(500);
            
            if (this.toggles.autoIllustrated) await this.claimIllustratedRewards();
            await sleep(500);
            
            if (this.toggles.autoFertilizerUse) await this.useFertilizerGiftPacks();
            await sleep(500);
            
            if (this.toggles.autoFertilizerBuy) await this.buyOrganicFertilizer();
        } catch (e) {
            this.fc.addLog('æ¯æ—¥å¥–åŠ±', `æ£€æŸ¥å‡ºé”™: ${e.message}`);
        }
    }

    // ========== 1. å•†åŸå…è´¹ç¤¼åŒ… ==========
    async claimFreeGifts(force = false) {
        if (!force && this._isDoneToday('freeGifts')) return 0;
        
        try {
            const reqBody = types.GetMallListBySlotTypeRequest.encode(
                types.GetMallListBySlotTypeRequest.create({ slot_type: 1 })
            ).finish();
            
            const { body: replyBody } = await this.fc.sendMsgAsync(
                'gamepb.mallpb.MallService', 'GetMallListBySlotType', reqBody
            );
            
            const reply = types.GetMallListBySlotTypeResponse.decode(replyBody);
            const goodsList = reply.goods_list || [];

            let claimed = 0;
            for (const goodsBytes of goodsList) {
                try {
                    const goods = types.MallGoods.decode(goodsBytes);
                    if (goods.is_free && goods.goods_id > 0) {
                        const purchaseReq = types.PurchaseRequest.encode(
                            types.PurchaseRequest.create({ goods_id: goods.goods_id, count: 1 })
                        ).finish();
                        await this.fc.sendMsgAsync('gamepb.mallpb.MallService', 'Purchase', purchaseReq);
                        claimed++;
                        await sleep(200);
                    }
                } catch (e) { /* å•ä¸ªå•†å“å¤±è´¥ç»§ç»­ */ }
            }

            if (claimed > 0) {
                this.fc.addLog('æ¯æ—¥å¥–åŠ±', `ğŸ é¢†å–å…è´¹ç¤¼åŒ… Ã—${claimed}`);
            }
            this._markDoneToday('freeGifts');
            return claimed;
        } catch (e) {
            this._markDoneToday('freeGifts');
            return 0;
        }
    }

    // ========== 2. åˆ†äº«å¥–åŠ± ==========
    async claimShareReward(force = false) {
        if (!force && this._isDoneToday('share')) return false;

        try {
            // æ£€æŸ¥æ˜¯å¦å¯ä»¥åˆ†äº«
            const checkReq = types.CheckCanShareRequest.encode(
                types.CheckCanShareRequest.create({})
            ).finish();
            const { body: checkBody } = await this.fc.sendMsgAsync(
                'gamepb.sharepb.ShareService', 'CheckCanShare', checkReq
            );
            const checkReply = types.CheckCanShareReply.decode(checkBody);
            
            if (!checkReply.can_share) {
                this._markDoneToday('share');
                return false;
            }

            // ä¸ŠæŠ¥åˆ†äº«
            const reportReq = types.ReportShareRequest.encode(
                types.ReportShareRequest.create({ shared: true })
            ).finish();
            await this.fc.sendMsgAsync('gamepb.sharepb.ShareService', 'ReportShare', reportReq);
            await sleep(300);

            // é¢†å–å¥–åŠ±
            const claimReq = types.ClaimShareRewardRequest.encode(
                types.ClaimShareRewardRequest.create({ claimed: true })
            ).finish();
            const { body: claimBody } = await this.fc.sendMsgAsync(
                'gamepb.sharepb.ShareService', 'ClaimShareReward', claimReq
            );
            const claimReply = types.ClaimShareRewardReply.decode(claimBody);

            if (claimReply.success || claimReply.items?.length > 0) {
                this.fc.addLog('æ¯æ—¥å¥–åŠ±', `ğŸ“¤ åˆ†äº«å¥–åŠ±: ${this._getRewardSummary(claimReply.items)}`);
                this._markDoneToday('share');
                return true;
            }
            this._markDoneToday('share');
            return false;
        } catch (e) {
            this._markDoneToday('share');
            return false;
        }
    }

    // ========== 3. æœˆå¡å¥–åŠ± ==========
    async claimMonthCard(force = false) {
        if (!force && this._isDoneToday('monthCard')) return false;

        try {
            const infoReq = types.GetMonthCardInfosRequest.encode(
                types.GetMonthCardInfosRequest.create({})
            ).finish();
            const { body: infoBody } = await this.fc.sendMsgAsync(
                'gamepb.mallpb.MallService', 'GetMonthCardInfos', infoReq
            );
            const infoReply = types.GetMonthCardInfosReply.decode(infoBody);
            const infos = infoReply.infos || [];

            const claimable = infos.filter(x => x.can_claim && x.goods_id > 0);
            if (claimable.length === 0) {
                this._markDoneToday('monthCard');
                return false;
            }

            let claimed = 0;
            for (const info of claimable) {
                try {
                    const claimReq = types.ClaimMonthCardRewardRequest.encode(
                        types.ClaimMonthCardRewardRequest.create({ goods_id: info.goods_id })
                    ).finish();
                    const { body: claimBody } = await this.fc.sendMsgAsync(
                        'gamepb.mallpb.MallService', 'ClaimMonthCardReward', claimReq
                    );
                    const claimReply = types.ClaimMonthCardRewardReply.decode(claimBody);
                    this.fc.addLog('æ¯æ—¥å¥–åŠ±', `ğŸ“… æœˆå¡å¥–åŠ±: ${this._getRewardSummary(claimReply.items)}`);
                    claimed++;
                    await sleep(300);
                } catch (e) { }
            }

            this._markDoneToday('monthCard');
            return claimed > 0;
        } catch (e) {
            this._markDoneToday('monthCard');
            return false;
        }
    }

    // ========== 4. é‚®ç®±å¥–åŠ± ==========
    async claimEmailRewards(force = false) {
        if (!force && this._isDoneToday('email')) return { claimed: 0 };

        try {
            const emails = [];
            // è·å–ä¸¤ä¸ªé‚®ç®±çš„é‚®ä»¶
            for (const boxType of [1, 2]) {
                try {
                    const req = types.GetEmailListRequest.encode(
                        types.GetEmailListRequest.create({ box_type: boxType })
                    ).finish();
                    const { body: replyBody } = await this.fc.sendMsgAsync(
                        'gamepb.emailpb.EmailService', 'GetEmailList', req
                    );
                    const reply = types.GetEmailListReply.decode(replyBody);
                    for (const email of (reply.emails || [])) {
                        if (email.has_reward && !email.claimed) {
                            emails.push({ ...email, boxType });
                        }
                    }
                } catch (e) { }
            }

            if (emails.length === 0) {
                this._markDoneToday('email');
                return { claimed: 0 };
            }

            let claimed = 0;
            let totalRewards = [];

            for (const email of emails) {
                try {
                    // å…ˆå°è¯•æ‰¹é‡é¢†å–
                    const batchReq = types.BatchClaimEmailRequest.encode(
                        types.BatchClaimEmailRequest.create({ box_type: email.boxType, email_id: email.id })
                    ).finish();
                    const { body: batchBody } = await this.fc.sendMsgAsync(
                        'gamepb.emailpb.EmailService', 'BatchClaimEmail', batchReq
                    );
                    const batchReply = types.BatchClaimEmailReply.decode(batchBody);
                    if (batchReply.items) totalRewards.push(...batchReply.items);
                    claimed++;
                } catch (e) {
                    // æ‰¹é‡å¤±è´¥ï¼Œå°è¯•å•ä¸ªé¢†å–
                    try {
                        const singleReq = types.ClaimEmailRequest.encode(
                            types.ClaimEmailRequest.create({ box_type: email.boxType, email_id: email.id })
                        ).finish();
                        const { body: singleBody } = await this.fc.sendMsgAsync(
                            'gamepb.emailpb.EmailService', 'ClaimEmail', singleReq
                        );
                        const singleReply = types.ClaimEmailReply.decode(singleBody);
                        if (singleReply.items) totalRewards.push(...singleReply.items);
                        claimed++;
                    } catch (e2) { }
                }
                await sleep(100);
            }

            if (claimed > 0) {
                this.fc.addLog('æ¯æ—¥å¥–åŠ±', `ğŸ“§ é‚®ç®±å¥–åŠ± Ã—${claimed}: ${this._getRewardSummary(totalRewards)}`);
            }
            this._markDoneToday('email');
            return { claimed };
        } catch (e) {
            this._markDoneToday('email');
            return { claimed: 0 };
        }
    }

    // ========== 5. QQä¼šå‘˜å¥–åŠ± ==========
    async claimVipGift(force = false) {
        if (!force && this._isDoneToday('vipGift')) return false;

        try {
            const statusReq = types.GetDailyGiftStatusRequest.encode(
                types.GetDailyGiftStatusRequest.create({})
            ).finish();
            const { body: statusBody } = await this.fc.sendMsgAsync(
                'gamepb.qqvippb.QQVipService', 'GetDailyGiftStatus', statusReq
            );
            const statusReply = types.GetDailyGiftStatusReply.decode(statusBody);

            if (!statusReply.can_claim) {
                this._markDoneToday('vipGift');
                return false;
            }

            const claimReq = types.ClaimDailyGiftRequest.encode(
                types.ClaimDailyGiftRequest.create({})
            ).finish();
            const { body: claimBody } = await this.fc.sendMsgAsync(
                'gamepb.qqvippb.QQVipService', 'ClaimDailyGift', claimReq
            );
            const claimReply = types.ClaimDailyGiftReply.decode(claimBody);

            if (claimReply.items?.length > 0) {
                this.fc.addLog('æ¯æ—¥å¥–åŠ±', `ğŸ‘‘ QQä¼šå‘˜å¥–åŠ±: ${this._getRewardSummary(claimReply.items)}`);
                this._markDoneToday('vipGift');
                return true;
            }
            this._markDoneToday('vipGift');
            return false;
        } catch (e) {
            this._markDoneToday('vipGift');
            return false;
        }
    }

    // ========== 6. å›¾é‰´å¥–åŠ± ==========
    async claimIllustratedRewards(force = false) {
        if (!force && this._isDoneToday('illustrated')) return false;

        try {
            const claimReq = types.ClaimAllRewardsV2Request.encode(
                types.ClaimAllRewardsV2Request.create({ only_claimable: true })
            ).finish();
            const { body: claimBody } = await this.fc.sendMsgAsync(
                'gamepb.illustratedpb.IllustratedService', 'ClaimAllRewardsV2', claimReq
            );
            const claimReply = types.ClaimAllRewardsV2Reply.decode(claimBody);

            const allItems = [...(claimReply.items || []), ...(claimReply.bonus_items || [])];
            if (allItems.length > 0) {
                this.fc.addLog('æ¯æ—¥å¥–åŠ±', `ğŸ“– å›¾é‰´å¥–åŠ±: ${this._getRewardSummary(allItems)}`);
                this._markDoneToday('illustrated');
                return true;
            }
            this._markDoneToday('illustrated');
            return false;
        } catch (e) {
            this._markDoneToday('illustrated');
            return false;
        }
    }

    // ========== 7. ç‚¹åˆ¸è´­ä¹°åŒ–è‚¥ ==========
    async buyOrganicFertilizer(force = false) {
        const COOLDOWN_MS = 10 * 60 * 1000; // 10åˆ†é’Ÿå†·å´
        const now = Date.now();
        
        if (!force && now - this.lastFertilizerBuyAt < COOLDOWN_MS) return 0;
        if (!force && this._isDoneToday('fertilizerBuy')) return 0;

        try {
            const reqBody = types.GetMallListBySlotTypeRequest.encode(
                types.GetMallListBySlotTypeRequest.create({ slot_type: 1 })
            ).finish();
            const { body: replyBody } = await this.fc.sendMsgAsync(
                'gamepb.mallpb.MallService', 'GetMallListBySlotType', reqBody
            );
            const reply = types.GetMallListBySlotTypeResponse.decode(replyBody);
            const goodsList = reply.goods_list || [];

            // æŸ¥æ‰¾æœ‰æœºåŒ–è‚¥å•†å“ (goods_id = 1002)
            let fertilizerGoods = null;
            for (const goodsBytes of goodsList) {
                try {
                    const goods = types.MallGoods.decode(goodsBytes);
                    if (goods.goods_id === 1002) {
                        fertilizerGoods = goods;
                        break;
                    }
                } catch (e) { }
            }

            if (!fertilizerGoods) {
                this._markDoneToday('fertilizerBuy');
                return 0;
            }

            let totalBought = 0;
            const MAX_ROUNDS = 100;
            const BUY_PER_ROUND = 10;

            for (let i = 0; i < MAX_ROUNDS; i++) {
                try {
                    const purchaseReq = types.PurchaseRequest.encode(
                        types.PurchaseRequest.create({ goods_id: fertilizerGoods.goods_id, count: BUY_PER_ROUND })
                    ).finish();
                    await this.fc.sendMsgAsync('gamepb.mallpb.MallService', 'Purchase', purchaseReq);
                    totalBought += BUY_PER_ROUND;
                    await sleep(100);
                } catch (e) {
                    // ä½™é¢ä¸è¶³æˆ–å…¶ä»–é”™è¯¯
                    if (e.message.includes('ä½™é¢ä¸è¶³') || e.message.includes('ç‚¹åˆ¸ä¸è¶³') || 
                        e.message.includes('1000019') || e.message.includes('ä¸è¶³')) {
                        break;
                    }
                    break;
                }
            }

            if (totalBought > 0) {
                this.fc.addLog('æ¯æ—¥å¥–åŠ±', `ğŸ§ª ç‚¹åˆ¸è´­ä¹°æœ‰æœºåŒ–è‚¥ Ã—${totalBought}`);
                this.lastFertilizerBuyAt = now;
            }
            
            return totalBought;
        } catch (e) {
            return 0;
        }
    }

    // ========== 8. è‡ªåŠ¨ä½¿ç”¨åŒ–è‚¥ç¤¼åŒ… ==========
    async useFertilizerGiftPacks(force = false) {
        if (!force && this._isDoneToday('fertilizerUse')) return 0;

        const FERTILIZER_GIFT_IDS = new Set([100003, 100004]); // åŒ–è‚¥ç¤¼åŒ…ID
        const FERTILIZER_ITEM_IDS = new Map([
            [80001, { type: 'normal', hours: 1 }],
            [80002, { type: 'normal', hours: 4 }],
            [80003, { type: 'normal', hours: 8 }],
            [80004, { type: 'normal', hours: 12 }],
            [80011, { type: 'organic', hours: 1 }],
            [80012, { type: 'organic', hours: 4 }],
            [80013, { type: 'organic', hours: 8 }],
            [80014, { type: 'organic', hours: 12 }],
        ]);
        const CONTAINER_LIMIT_HOURS = 990;
        const NORMAL_CONTAINER_ID = 1011;
        const ORGANIC_CONTAINER_ID = 1012;

        try {
            // è·å–èƒŒåŒ…
            const bagReq = types.BagRequest.encode(types.BagRequest.create({})).finish();
            const { body: bagBody } = await this.fc.sendMsgAsync(
                'gamepb.itempb.ItemService', 'Bag', bagReq
            );
            const bagReply = types.BagReply.decode(bagBody);
            const items = bagReply.item_bag?.items || bagReply.items || [];

            // è·å–å½“å‰å®¹å™¨æ—¶é•¿
            let normalSec = 0, organicSec = 0;
            for (const it of items) {
                const id = toNum(it.id);
                const count = toNum(it.count);
                if (id === NORMAL_CONTAINER_ID) normalSec = count;
                if (id === ORGANIC_CONTAINER_ID) organicSec = count;
            }
            const containerHours = {
                normal: normalSec / 3600,
                organic: organicSec / 3600,
            };

            // æ”¶é›†å¯ä½¿ç”¨çš„åŒ–è‚¥é“å…·
            const toUse = [];
            for (const it of items) {
                const id = toNum(it.id);
                const count = toNum(it.count);
                if (count <= 0) continue;
                
                // å…ˆä½¿ç”¨åŒ–è‚¥ç¤¼åŒ…
                if (FERTILIZER_GIFT_IDS.has(id)) {
                    toUse.push({ id, count, isGift: true });
                }
                // ä½¿ç”¨åŒ–è‚¥é“å…·
                else if (FERTILIZER_ITEM_IDS.has(id)) {
                    const info = FERTILIZER_ITEM_IDS.get(id);
                    const currentHours = info.type === 'normal' ? containerHours.normal : containerHours.organic;
                    if (currentHours < CONTAINER_LIMIT_HOURS) {
                        const remainHours = CONTAINER_LIMIT_HOURS - currentHours;
                        const maxCount = Math.floor(remainHours / info.hours);
                        const useCount = Math.min(count, maxCount);
                        if (useCount > 0) {
                            toUse.push({ id, count: useCount, isGift: false, type: info.type, hours: info.hours });
                        }
                    }
                }
            }

            if (toUse.length === 0) {
                this._markDoneToday('fertilizerUse');
                return 0;
            }

            let used = 0;
            for (const item of toUse) {
                try {
                    // ä½¿ç”¨ç‰©å“
                    const useReq = types.UseRequest.encode(
                        types.UseRequest.create({ item_id: toLong(item.id), count: toLong(item.count) })
                    ).finish();
                    await this.fc.sendMsgAsync('gamepb.itempb.ItemService', 'Use', useReq);
                    used += item.count;
                    
                    // æ›´æ–°å®¹å™¨è®¡æ•°
                    if (!item.isGift && item.type && item.hours) {
                        if (item.type === 'normal') containerHours.normal += item.count * item.hours;
                        else containerHours.organic += item.count * item.hours;
                    }
                } catch (e) {
                    // å®¹å™¨å·²æ»¡
                    if (e.message.includes('1003002') || e.message.includes('ä¸Šé™')) {
                        continue;
                    }
                }
                await sleep(100);
            }

            if (used > 0) {
                this.fc.addLog('æ¯æ—¥å¥–åŠ±', `ğŸ§´ ä½¿ç”¨åŒ–è‚¥é“å…· Ã—${used}`);
            }
            this._markDoneToday('fertilizerUse');
            return used;
        } catch (e) {
            this._markDoneToday('fertilizerUse');
            return 0;
        }
    }

    /**
     * è·å–æ¯æ—¥å¥–åŠ±çŠ¶æ€
     */
    getStatus() {
        return {
            dailyRewardState: { ...this.dailyRewardState },
            toggles: { ...this.toggles },
            lastFertilizerBuyAt: this.lastFertilizerBuyAt,
        };
    }
}

module.exports = DailyRewards;
